<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DescriptionActivity"
    android:background="#ffffff">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/toolbar">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:id="@+id/Content11"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="centerCrop"
                    android:padding="5dp"/>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtBookName"
                        android:text="@string/name_of_the_book"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="#000000"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtBookAuthor"
                        android:layout_below="@id/txtBookName"
                        android:text="@string/name_of_the_author"
                        android:padding="8dp"
                        android:textSize="15sp"
                        android:textColor="#000000"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtBookPrice"
                        android:text="@string/rs_299"
                       android:layout_below="@id/txtBookAuthor"
                        android:padding="8dp"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#357a38"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:id="@+id/txtBookRating"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="#ffc828"
                    android:text="@string/_4_5"
                    android:drawableLeft="@drawable/ic_ratings"
                    android:drawablePadding="4dp"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/Content11">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtAboutTheBookStatic"
                    android:layout_centerHorizontal="true"
                    android:padding="6dp"
                    android:text="@string/about_the_book"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtBookDesc"
                    android:layout_below="@id/txtAboutTheBookStatic"
                   android:layout_margin="10dp"
                    android:padding="6dp"
                    android:text="@string/about_the_book_hello_hello"
                    android:textColor="#000000"
                    android:textSize="16sp" />
            </RelativeLayout>

        </RelativeLayout>

</ScrollView>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnAddToFav"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:text="@string/add_to_favourites"
        android:textSize="19sp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:id="@+id/progressLayout">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>


</RelativeLayout>